5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1637_1053.log
== TEST (2019-04-07 17:29:19) 
-- CODE:
nome=input("nome do patrono: ")

if (nome=cervo):
	mensagem=cervo eh patrono do Harry Potter
else(nome!=cervo):
	mensagem=<nome> nao eh patrono do Harry Potter
	
	print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (nome=cervo):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:29:44) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem=cervo eh patrono do Harry Potter
else(nome!==cervo):
	mensagem=<nome> nao eh patrono do Harry Potter
	
	print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem=cervo eh patrono do Harry Potter
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:30:16) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem=cervo eh patrono do Harry Potter
else(nome!==cervo):
	mensagem=<nome> nao eh patrono do Harry Potter
	
	print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem=cervo eh patrono do Harry Potter
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:30:31) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem==cervo eh patrono do Harry Potter
else(nome!==cervo):
	mensagem==<nome> nao eh patrono do Harry Potter
	
	print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem==cervo eh patrono do Harry Potter
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:30:55) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem==cervo eh patrono do Harry Potter
else(nome!==cervo):
	mensagem==<nome> nao eh patrono do Harry Potter
	
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem==cervo eh patrono do Harry Potter
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:31:08) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem=cervo eh patrono do Harry Potter
else(nome!==cervo):
	mensagem=<nome> nao eh patrono do Harry Potter
	
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem=cervo eh patrono do Harry Potter
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:31:34) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem = cervo eh patrono do Harry Potter
else(nome!=cervo):
	mensagem = <nome> nao eh patrono do Harry Potter
	
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem = cervo eh patrono do Harry Potter
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:33:09) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else(nome!=cervo):
	mensagem = "<nome> nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(nome!=cervo):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:33:21) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else(nome!==cervo):
	mensagem = "<nome> nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else(nome!==cervo):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:34:49) 
-- CODE:
nome=input("nome do patrono: ")

if (nome==cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<nome> nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:35:32) 
-- CODE:
nome=input("nome do patrono: ")

if (nome=cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<nome> nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (nome=cervo):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:35:51) 
-- CODE:
nome=input("nome do patrono: ")

if (nome = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<nome> nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:36:07) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<nome> nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:37:01) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nome" + "nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:37:51) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == cervo):
	mensagem = cervo eh patrono do Harry Potter
else:
	mensagem = "nome" + "nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem = cervo eh patrono do Harry Potter
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:38:01) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == cervo):
	mensagem = cervo eh patrono do Harry Potter
else:
	mensagem = "nome" + "nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem = cervo eh patrono do Harry Potter
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:06:50) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == cervo):
	mensagem = cervo eh patrono do Harry Potter
else:
	mensagem = "nome" + "nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem = cervo eh patrono do Harry Potter
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:07:20) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nome" + "nao eh patrono do Harry Potter"
	
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:08:06) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nome" + "nao eh patrono do Harry Potter"
	
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:09:45) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nome" +" "+"nao eh patrono do Harry Potter"
	
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:10:18) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome +" "+"nao eh patrono do Harry Potter"
	
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:10:32) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome +" "+"nao eh patrono do Harry Potter"
	
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:10:46) 
-- CODE:
nome=input("nome do patrono: ")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome +" "+"nao eh patrono do Harry Potter"
	
print(mensagem)

-- EXECUTION TIME:
0.144034
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
